--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -26,10 +26,10 @@
 \newcommand{\re}[0]{\mathrm{Re}}
 \newcommand{\im}[0]{\mathrm{Im}}
 \newcommand{\cl}[0]{\mathrm{cl}}
-\newcommand{\grad}[0]{\vec{\mathrm{grad}}}
+\newcommand{\grad}[0]{\overrightarrow{\mathrm{grad}}}
 \renewcommand{\div}[0]{\mathrm{div}\,}
-\newcommand{\rot}[0]{\vec{\mathrm{rot}}\,}
-\newcommand{\vnabla}[0]{\vec{\nabla}}
+\newcommand{\rot}[0]{\overrightarrow{\mathrm{rot}}\,}
+\newcommand{\vnabla}[0]{\overrightarrow{\nabla}}
 \newcommand{\spectre}[0]{\mathrm{Sp}}
 \renewcommand{\vec}[1]{\overrightarrow{#1}}
 \newcommand{\mat}[1]{\mathrm{Mat}_{#1}}
@@ -56,6 +56,8 @@
           & #4 \longmapsto #5
   \end{align*}
 }
+\newcommand{\vecc}[1]{\overrightarrow{\underline{#1}}}
+
 
 
 
