--- a/physique spé/ondes electromagnétiques dans le vide/oem_vide.tex
+++ b/physique spé/ondes electromagnétiques dans le vide/oem_vide.tex
@@ -68,11 +68,41 @@
 \begin{definition}{}{opérateur nabla appliqué à une représentation complexe d'OPPH}
     Pour $\vecc{E}(x,t) &= \underline{E_0} e^{i(\omega t - \vec{k} \cdot \vec{OM})}\vec{e_p}$, on a~:
     $$\begin{cases*}
-        \displaystyle\derive{}{\vecc{E}}{x} = -ik_x\vecc{E}\\
-        \displaystyle\derive{}{\vecc{E}}{y} = -ik_y\vecc{E}\\
-        \displaystyle\derive{}{\vecc{E}}{z} = -ik_z\vecc{E}\\
+        \displaystyle\derivepar{}{\vecc{E}}{x} = -ik_x\vecc{E}\\
+        \displaystyle\derivepar{}{\vecc{E}}{y} = -ik_y\vecc{E}\\
+        \displaystyle\derivepar{}{\vecc{E}}{z} = -ik_z\vecc{E}\\
     \end{cases*}$$
     On identifie alors $\vec{\nabla} = -i\vec{k}$.
+\end{definition}
+
+\begin{theoreme}{}{équations de Maxwell-Gauss et Maxwell-Thomson en représentation complexe}
+    En représentation complexe d'une OPPH électromagnétique, les équations de Maxwell-Gauss et Maxwell-Thomson s'écrivent~:
+    $$\vec{k} \cdot \vecc{E} = 0 \qquad \text{(M.G.)}$$
+    $$\vec{k} \cdot \vecc{B} = 0 \qquad \text{(M.T.)}$$
+\end{theoreme}
+
+\begin{theoreme}{}{équations de Maxwell-Faraday et Maxwell-Ampère en représentation complexe}
+    En représentation complexe d'une OPPH électromagnétique, les équations de Maxwell-Faraday et Maxwell-Ampère s'écrivent~:
+    $$\vec{k} \wedge \vecc{E} = \omega \vecc{B} \qquad \text{(M.F.)}$$
+    $$\vec{k} \wedge \vecc{B} = - \varepsilon_0 \mu_0 \omega \vecc{E} \qquad \text{(M.A.)}$$
+\end{theoreme}
+
+\begin{theoreme}{}{relation de structure d'une OPPH et d'une OPP}
+    Pour une OPPH, d'après les équations de Maxwell en représentation complexe (avec passage en partie réelle)~:
+    $$\vec{B} = \frac{\vec{u} \wedge \vec{E}}{c}$$
+    Pour une OPP, en tant que somme d'OPPH de même sens de propagation, on a par linéarité la même relation.
+\end{theoreme}
+
+\begin{definition}{}{polarisation d'une OPP électromagnétique}
+    On appelle \notion{polarisation} d'une OPP la direction du vecteur champ électrique de l'onde.
+\end{definition}
+
+\begin{definition}{}{OPP électromagnétique non polarisée}
+    Une OPP électromagnétique est dite \notion{non polarisée} si sa direction de polarisation fluctue rapidement et aléatoirement.
+\end{definition}
+
+\begin{definition}{}{OPP électromagnétique polarisée rectilignement}
+    Par opposition aux OPP électromagnétiques non polarisées, une OPP électromagnétique est dite \notion{polarisée rectilignement} si la direction du vecteur champ électrique est constante.
 \end{definition}
 
 \end{document}
