--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -43,7 +43,7 @@
 \newcommand{\adh}[1]{\overline{#1}}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
-\newcommand{\scal}[2]{( #1 | #2 )}
+\newcommand{\scal}[2]{\left( #1 | #2 \right)}
 \newcommand{\distance}[2]{\mathrm{d}(#1,\,#2)}
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
